# nexus

./: .gitignore  0001-feat-Add-anyshake_plugin.patch  Makefile  README.md  build.sh  callback.go  go.mod  go.sum  install.sh  main.go
.github/workflows/: build.yml
anyshake_plugin/: .gitignore  CMakeLists.txt  Makefile  argument.go  callback.go  forwarder.go  go.mod  ipc.go  main.go  message.go  miniseed.go  plugin.go  sender.go  utils.go
anyshake_plugin/descriptions/: anyshake_plugin.xml
message/: message.go  parse.go  types.go  validate.go
scripts/: install.sh  uninstall.sh
templates/anyshake/: seedlink_plugin.tpl  setup.py  streams_e_c1x1g_3ch.tpl  streams_e_c1x1g_3ch_100hz.tpl  streams_e_c1x1g_3ch_200hz.tpl  streams_e_c1x1g_3ch_250hz.tpl  streams_e_c1x1g_3ch_50hz.tpl  streams_e_c1x1g_3ch_acc.tpl  streams_e_c1x1g_3ch_vel.tpl  streams_e_c1x1g_6ch.tpl  streams_e_c1x1g_6ch_100hz.tpl  streams_e_c1x1g_6ch_200hz.tpl  streams_e_c1x1g_6ch_250hz.tpl  streams_e_c1x1g_6ch_50hz.tpl
